hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch4.php
<?hh // strict

function f(): void {
  $c = keyset<int>["bar", "baz"];
}
